--- a/lab3/.gitignore
+++ b/lab3/.gitignore
@@ -16,3 +16,7 @@ scor_ban_svm.avi
 scor_pin_svm.avi
 scor_ban_tree.avi
 scor_pin_tree.avi
+cnn.ipynb
+kaze_another_describe.ipynb
+kaze_new_way.ipynb
+kaze_test.ipynb
